--- a/src/sass/example-page/typography.scss
+++ b/src/sass/example-page/typography.scss
@@ -51,7 +51,7 @@ blockquote {
     border-radius: 30px;
     color: $color-white;
     font-size: 18px;
-    font-weight: 600;
+    font-weight: $font-weight-semibold;
     line-height: 0;
     margin: 0 0.6rem 0 0rem;
     padding: 3px 10px;
