--- a/src/sass/modules/forms/forms.scss
+++ b/src/sass/modules/forms/forms.scss
@@ -25,7 +25,7 @@ fieldset {
       @include user-select(none);
       font-size: $font-size-normal;
       display: inline-block;
-      font-weight: normal;
+      font-weight: $font-weight-normal;
       cursor: pointer;
     }
   }
@@ -130,7 +130,7 @@ fieldset {
       color: $color-icon-primary;
       font-family: 'dashing-icons';
       font-size: 12px;
-      font-weight: 600;
+      font-weight: $font-weight-semibold;
       pointer-events: none;
       position: absolute;
       right: 2rem;
