--- a/src/sass/modules/icons/icons.scss
+++ b/src/sass/modules/icons/icons.scss
@@ -1,6 +1,6 @@
 @font-face {
   font-family: 'dashing-icons';
-  font-weight: normal;
+  font-weight: $font-weight-normal;
   font-style: normal;
 }
 
@@ -15,7 +15,7 @@
     font-family: "dashing-icons";
     font-size: 16px;
     font-style: normal;
-    font-weight: normal;
+    font-weight: $font-weight-normal;
     line-height: 1em;
     speak: none;
     text-decoration: inherit;
