--- a/src/sass/modules/progress-stepper/progress-stepper.scss
+++ b/src/sass/modules/progress-stepper/progress-stepper.scss
@@ -33,7 +33,7 @@ $progress-color: $color-green !default; //Override this variable to change the c
   padding-top: 0.5rem;
   flex-grow: 1;
   font-size: 0.8rem;
-  font-weight: 600;
+  font-weight: $font-weight-semibold;
   justify-content: center;
   text-align: center;
   // display: none;
