--- a/src/sass/modules/navigation/navigation.scss
+++ b/src/sass/modules/navigation/navigation.scss
@@ -6,6 +6,7 @@ $content-width: $global-content-width;
 
 $header-height: 4rem;
 $sub-nav-height: 3rem;
+$nav-separator-width: 2px;
 $global-banner-height: 3.5rem;
 $global-banner-height_phone: 4rem;
 
