Add padding-right to select for overflowing text

--- a/src/sass/modules/forms/forms.scss
+++ b/src/sass/modules/forms/forms.scss
@@ -125,6 +125,11 @@ fieldset {
   &.select--has-icon,
   .select--has-icon {
     position: relative;
+
+    select {
+      padding-right: $space-xl;
+    }
+
     &:after {
       content: '\e800';
       color: $color-icon-primary;
