--- a/src/sass/modules/banner/_banner.scss
+++ b/src/sass/modules/banner/_banner.scss
@@ -1,3 +1,52 @@
+$content-width: 1200px !default;
+$global-banner-height: 3.5rem;
+$global-banner-height_phone: 4rem;
+
+/* Shared Banner Styles
+  =========================================================================== */
+@mixin shared-banner {
+  &.has-success,
+  &.has-error {
+    p { color: $color-white; }
+    .dashing-icon:before { color: $color-white;}
+  }
+
+  &.has-warning {
+    p { color: $color-black; }
+    .dashing-icon:before { color: $color-black;}
+  }
+
+  &.has-success { background-color: $color-green; }
+  &.has-warning { background-color: $color-orange; }
+  &.has-error   { background-color: $color-red; }
+
+  .dashing-icon {
+    margin-right: $space-xs;
+    &::before { padding: 1px; }
+  }
+
+  p {
+    font-size: $font-size-small;
+    font-weight: $font-weight-semibold;
+    margin: 0;
+  }
+
+  a {
+    border-bottom: solid 2px;
+    color: inherit;
+    cursor: pointer;
+    text-decoration: none;
+
+    &:focus,
+    &:hover {
+      opacity: 0.6;
+      transition: all 50ms ease-in-out;
+      text-decoration: none;
+      color: inherit;
+    }
+  }
+}
+
 /* Banner Styles
   =========================================================================== */
 .page-banner {
@@ -24,6 +73,7 @@
 }
 
 .card-banner {
+  @include shared-banner;
   align-items: baseline;
   background-color: $color-gray-3;
   display: flex;
@@ -36,42 +86,41 @@
     button { white-space: nowrap; }
     p { margin-right: $grid-gutter; }
   }
+}
 
-  a {
-    border-bottom: solid 2px;
-    color: inherit;
-    cursor: pointer;
-    text-decoration: none;
+.global-banner-container {
+  @include shared-banner;
+  animation: fadein 0.25s;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 4;
+  height: $global-banner-height_phone;
+  max-height: $global-banner-height_phone;
 
-    &:focus,
-    &:hover {
-      opacity: 0.6;
-      transition: all 50ms ease-in-out;
-      text-decoration: none;
-      color: inherit;
-    }
+  @media #{$tablet} {
+    height: $global-banner-height;
+    max-height: $global-banner-height;
   }
+}
 
-  &.has-success,
-  &.has-error {
-    p { color: $color-white; }
-    .dashing-icon:before { color: $color-white;}
-  }
+.global-banner {
+  display: flex;
+  align-items: center;
+  padding: 0 $space-m;
+  overflow-x: auto;
+  overflow-y: hidden;
+  white-space: nowrap;
 
-  &.has-warning {
-    p { color: $color-black; }
-    .dashing-icon:before { color: $color-black;}
-  }
+  max-width: $content-width;
+  margin: auto;
 
-  &.has-success { background-color: $color-green; }
-  &.has-warning { background-color: $color-orange; }
-  &.has-error   { background-color: $color-red; }
-
-  .dashing-icon { margin-right: 0.5rem; }
+  width: 100%;//IE wants this... okay IE. Here you are.
+  height: 100%;
 
   p {
-    font-size: 0.9rem;
-    font-weight: $font-weight-semibold;
-    margin: 0;
+    font-size: $font-size-normal;
+    padding-right: $space-m;
   }
 }
